# langchain-kalibr

./: LICENSE  Makefile  PUBLISH_INSTRUCTIONS.md  README.md  pyproject.toml
docs/: AGENTS.md  awesome-list-submissions.md  crewai-community-post.md  langchain-chat-integration.md  langchain-provider-page.md  llms.txt
langchain_kalibr/: __init__.py  chat_models.py
tests/: test_chat_models.py
